correction de  z-index des postits et popups

--- a/public/css/ajouter.css
+++ b/public/css/ajouter.css
@@ -147,7 +147,7 @@ footer a:hover {
   display:none;
   justify-content:center;
   align-items:center;
-  z-index: 100;
+  z-index: 1000;
 }
 
 .contenu_postit{
